# clawmacdo

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE_LOGIC_AND_DATA_FLOW.md  Cargo.toml  Dockerfile  EVAL_SECURITY_FLAW.md  LICENSE  LICENSE-BSL.md  LICENSE-COMMERCIAL.md  LICENSE-GPL.md  LICENSING.md  README.md  openclaw_scan_177336_checksum.md5  openclaw_scan_177336_checksum.sha256  railway.toml
.cargo/: config.toml
.claude/commands/: rust-format.md
.github/workflows/: changelog.yml  npm-publish.yml  release.yml  security-scan.yml
crates/clawmacdo-cli/: Cargo.toml
crates/clawmacdo-cli/src/: lib.rs  main.rs
crates/clawmacdo-cli/src/commands/: ark.rs  backup.rs  bedrock_token.rs  bp_restore.rs  bp_snapshot.rs  claude_auth.rs  cron_schedule.rs  deploy.rs  deploy_cmd.rs  destroy.rs  do_restore.rs  do_snapshot.rs  docker_fix.rs  gws.rs  gyne_consumer_profile.rs  hermes_lightsail.rs  hooks.rs  list_backups.rs  ls_restore.rs  ls_restore_fast.rs  ls_snapshot.rs  memory_download.rs  migrate.rs  mod.rs  openclaw_gateway_token.rs  openclaw_gateway_url.rs  openclaw_identity.rs  openclaw_llm_wiki.rs  openclaw_md_download.rs  openclaw_version.rs  plugin_install.rs  remotion_avatar.rs  scan_security.rs  serve.rs  skill.rs  skill_deploy.rs  skill_diff.rs  skill_remove.rs  status.rs  tailscale_funnel.rs  (+8 more)
crates/clawmacdo-cloud/: Cargo.toml
crates/clawmacdo-cloud/src/: azure_cli.rs  byteplus.rs  cloud_init.rs  cloud_provider.rs  digitalocean.rs  lib.rs  lightsail_cli.rs  tencent.rs
crates/clawmacdo-core/: Cargo.toml
crates/clawmacdo-core/src/: config.rs  error.rs  lib.rs
crates/clawmacdo-db/: Cargo.toml
crates/clawmacdo-db/src/: db.rs  lib.rs
crates/clawmacdo-provision/: Cargo.toml
crates/clawmacdo-provision/src/: lib.rs
crates/clawmacdo-provision/src/provision/: commands.rs  docker.rs  firewall.rs  mod.rs  nodejs.rs  openclaw.rs  system_tools.rs  tailscale.rs  user.rs
crates/clawmacdo-ssh/: Cargo.toml
crates/clawmacdo-ssh/src/: lib.rs  ssh.rs
crates/clawmacdo-ui/: Cargo.toml
crates/clawmacdo-ui/src/: lib.rs  progress.rs  ui.rs
docs/: DEPLOYMENT_ARCHITECTURE_RESEARCH.md  EVAL_SECURITY_FLAW.md  HIGH_SECURITY_FIXES.md  SECURITY_SCAN.md  TENCENT_PLAN.md  TRACKING_ARCHITECTURE.md  clawmacdo_usage.md  tanstack-progress-tracking.md
e2e/: .env.e2e.example  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: deploy-scenarios.csv
e2e/helpers/: csv-reader.ts  form-filler.ts
e2e/tests/: deploy-form.spec.ts
fixtures/: sample_high_risk.json
npm/@clawmacdo/darwin-arm64/: package.json
npm/@clawmacdo/linux-x64/: package.json
npm/@clawmacdo/win32-x64/: package.json
npm/clawmacdo/: README.md  index.d.ts  index.js  package.json
scripts/: evaluate_risk.ps1  evaluate_risk.sh  format_outputs.ps1  format_outputs.sh  gen_apikey.ps1  gen_apikey.sh  macos_scan.ps1  macos_scan.sh  npm-package.ps1  npm-package.sh  npm-publish.ps1  npm-publish.sh  openclaw_config_scan.ps1  openclaw_config_scan.sh  release.ps1  release.sh  run_all_scans.ps1  run_all_scans.sh  ubuntu_scan.ps1  ubuntu_scan.sh  verify_apikey.py  windows_scan.ps1  windows_scan_wrapper.ps1  windows_scan_wrapper.sh
skills-data-api/: .dockerignore  Dockerfile  README.md  download-skills.ps1  download-skills.sh  index.js  load-mongo.ps1  load-mongo.sh  package-lock.json  package.json  scrape-skills.ps1  scrape-skills.sh  skills.json
src/: cloud_init.rs  cloud_provider.rs  config.rs  db.rs  digitalocean.rs  error.rs  main.rs  progress.rs  ssh.rs  tencent.rs  ui.rs
src.backup/: cloud_init.rs  digitalocean.rs  error.rs  main.rs
src.backup/commands/: migrate.rs  whatsapp.rs
src.backup/provision/: openclaw.rs
src/commands/: backup.rs  deploy.rs  destroy.rs  docker_fix.rs  list_backups.rs  migrate.rs  mod.rs  serve.rs  status.rs
src/provision/: commands.rs  docker.rs  firewall.rs  mod.rs  nodejs.rs  openclaw.rs  system_tools.rs  tailscale.rs  user.rs
tests/integration/: test_run_all.ps1  test_run_all.sh
tests/unit/: test_format_and_eval.ps1  test_format_and_eval.sh
web/server/: security_api.js
web/src/components/security/: SecurityTab.jsx
