[package]
name = "clawmacdo"
version = "0.2.0"
edition = "2021"
description = "CLI tool for migrating OpenClaw from Mac/DO to DigitalOcean"

[[bin]]
name = "clawmacdo"
path = "src/main.rs"

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
dirs = "6"
flate2 = "1"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ssh2 = "0.9"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
axum = "0.8"
