[workspace]
resolver = "2"
members = [
    "crates/clawmacdo-cli",
    "crates/clawmacdo-core", 
    "crates/clawmacdo-cloud",
    "crates/clawmacdo-provision",
    "crates/clawmacdo-db",
    "crates/clawmacdo-ssh",
    "crates/clawmacdo-ui"
]

[workspace.dependencies]
# External dependencies (from original Cargo.toml)
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
dirs = "6"
dotenvy = "0.15"
flate2 = "1"
hex = "0.4"
hmac = "0.12"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
ssh2 = "0.9"
tar = "0.4"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time", "fs", "sync"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }

# Internal crates (will be defined below)
clawmacdo-core = { path = "crates/clawmacdo-core" }
clawmacdo-cloud = { path = "crates/clawmacdo-cloud" }
clawmacdo-provision = { path = "crates/clawmacdo-provision" }
clawmacdo-db = { path = "crates/clawmacdo-db" }
clawmacdo-ssh = { path = "crates/clawmacdo-ssh" }
clawmacdo-ui = { path = "crates/clawmacdo-ui" }

[profile.release]
# Optimize for size and performance
opt-level = "z"          # Optimize for size
lto = true               # Link-time optimization
codegen-units = 1        # Better optimization, slower compile
panic = "abort"          # Smaller binary (no unwinding)
strip = true             # Remove symbols and debug info

[profile.release-fast] 
# Alternative: optimize for speed over size
inherits = "release"
opt-level = 3            # Maximum speed optimization
lto = "fat"              # More aggressive LTO

[profile.release-small]
# Alternative: maximum size optimization  
inherits = "release"
opt-level = "z"          # Size optimization
lto = true
codegen-units = 1
panic = "abort"
strip = true