[package]
name = "clawmacdo-cli"
version = "0.4.0"
edition = "2021"
description = "CLI tool for migrating OpenClaw from Mac/DO to DigitalOcean"

[[bin]]
name = "clawmacdo"
path = "src/main.rs"

[features]
default = ["web-ui", "tencent-cloud", "lightsail"]
web-ui = ["axum", "serde", "serde_json", "tokio-stream", "rusqlite"]
lightsail = ["clawmacdo-cloud/lightsail"]
tencent-cloud = ["clawmacdo-cloud/tencent"]
digitalocean-only = ["clawmacdo-cloud/digitalocean"]
aws-only = ["lightsail"]
minimal = []  # Minimal build without web UI

[dependencies]
# Core dependencies (always included)
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Optional dependencies (feature-gated)
axum = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Internal crates
clawmacdo-core = { workspace = true }
clawmacdo-cloud = { workspace = true }
clawmacdo-provision = { workspace = true }
clawmacdo-db = { workspace = true }
clawmacdo-ssh = { workspace = true }
clawmacdo-ui = { workspace = true }