[package]
name = "clawmacdo-cli"
version = "0.54.0"
edition = "2021"
description = "CLI tool for migrating OpenClaw from Mac/DO to DigitalOcean"

[[bin]]
name = "clawmacdo"
path = "src/main.rs"

[features]
default = ["web-ui", "digitalocean", "tencent-cloud", "lightsail", "azure", "byteplus"]
web-ui = ["axum", "tokio-stream", "tower", "tower-http"]
digitalocean = ["clawmacdo-cloud/digitalocean"]
lightsail = ["clawmacdo-cloud/lightsail"]
azure = ["clawmacdo-cloud/azure"]
tencent-cloud = ["clawmacdo-cloud/tencent"]
byteplus = ["clawmacdo-cloud/byteplus"]
digitalocean-only = ["digitalocean"]
aws-only = ["lightsail"]
minimal = []  # Minimal build without web UI

[dependencies]
# Core dependencies (always included)
anyhow = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
dotenvy = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Core dependencies used by track + deploy + skill upload/download
reqwest = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Optional dependencies (feature-gated)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

# Internal crates
clawmacdo-core = { workspace = true }
clawmacdo-cloud = { workspace = true }
clawmacdo-provision = { workspace = true }
clawmacdo-db = { workspace = true }
clawmacdo-ssh = { workspace = true }
clawmacdo-ui = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"





















