[package]
name = "clawmacdo-cloud"
version = "0.4.0"
edition = "2021"
description = "Cloud provider implementations for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
hmac = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

clawmacdo-core = { workspace = true }