[package]
name = "clawmacdo-cloud"
version = "0.46.4"
edition = "2021"
description = "Cloud provider implementations for ClawMacdo"

[features]
default = ["digitalocean", "tencent", "byteplus"]
digitalocean = []
lightsail = []  # AWS CLI integration (no extra dependencies)
tencent = ["hex", "hmac", "sha2"]
azure = []  # Azure CLI integration (no extra dependencies)
byteplus = ["hex", "hmac", "sha2"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

# Tencent Cloud specific (optional)
hex = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

clawmacdo-core = { workspace = true }
















