[package]
name = "clawmacdo-core"
version = "0.12.0"
edition = "2021"
description = "Core types, configuration, and error handling for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }