[package]
name = "clawmacdo-db"
version = "0.39.0"
edition = "2021"
description = "Database operations and storage for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

clawmacdo-core = { workspace = true }


