[package]
name = "clawmacdo-provision"
version = "0.58.0"
edition = "2021"
description = "Server provisioning and setup logic for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

clawmacdo-core = { workspace = true }
clawmacdo-ssh = { workspace = true }
clawmacdo-ui = { workspace = true }
























