[package]
name = "clawmacdo-ssh"
version = "0.5.0"
edition = "2021"
description = "SSH/SCP operations and key management for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
dirs = { workspace = true }
ssh2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

clawmacdo-core = { workspace = true }