[package]
name = "clawmacdo-ui"
version = "0.49.0"
edition = "2021"
description = "User interface components for ClawMacdo"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
console = { workspace = true }
dialoguer = { workspace = true }
indicatif = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

clawmacdo-core = { workspace = true }



















